# cpp-modern

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: build_example.cmake
scripts/: build.sh  build_all.sh  clean_all.sh
src/: CMakeLists.txt
src/1-hello-world/: CMakeLists.txt
src/11/1-hello-world/: CMakeLists.txt
src/11/2-uniform-initialization/: 2-uniform-initialization.cpp  CMakeLists.txt  example1.cpp  example3.cpp  example4.cpp  examples.hpp
src/14/1-generics-lambdas/: 1-generics-lambdas.cpp
src/17/1-filesystem/: 1-filesystem.cpp  CMakeLists.txt
src/17/4-solid-principles/: 4-solid-principles.cpp
src/17/5-rule-of-5/: 5-rule-of-5.cpp  Cat.h
src/2-second-test/: 2-second-test.cpp  CMakeLists.txt
src/2-uniform-initialization/: CMakeLists.txt  example2.cpp
src/detect_type/: detect_type.cpp
src/generics_templates/: Aliases.h  Array.h  Base.h  Box.h  Concepts.h  DefaultBox.h  Pair.h  Printer.h  Storage.h  Wrapper.h  class_templates.cpp  function_templates.cpp  generics.h  main.cpp
src/optional/: optional.cpp
